# alchemist

./: README.md  get_pps.py  pyproject.toml  requirements.txt
alchemist/: __init__.py
alchemist/notifications/: discord.py
alchemist/qe/: build_atomic_system.py  build_calculator_params.py
alchemist/qe/utils/: objects.py  pwscf.py
examples/aucu/: p1.ipynb  p3.ipynb
examples/band_gap/: band_structure.ipynb  bandgap.ipynb
examples/band_gap/KPbI3/: KPbI3.pwi  KPbI3.pwo
examples/band_gap/results/: KPbI.pwi  KPbI.pwo
examples/fe/: fe.ipynb  p1.ipynb  p1a.py  p1b.py  p2.ipynb  p3.ipynb  p5.ipynb
examples/fe/.ipynb_checkpoints/: p4-checkpoint.ipynb  p5-checkpoint.ipynb
examples/pbtio3/: p1.ipynb  p2.ipynb  p3.ipynb
fe/: fe.ipynb
